--- a/Question_generator/QG2.ipynb
+++ b/Question_generator/QG2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "id": "bb8e1c8b",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "id": "d9faaa05",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "id": "6c1b1442",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "id": "98d75405",
    "metadata": {
     "cell_style": "center"
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "id": "c5841968",
    "metadata": {
     "cell_style": "center",
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "id": "58704a07",
    "metadata": {},
    "outputs": [],
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 18,
    "id": "2823d354",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "id": "de3db872",
    "metadata": {},
    "outputs": [],
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "id": "dfe4e3dd",
    "metadata": {},
    "outputs": [],
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 21,
    "id": "afa8feca",
    "metadata": {},
    "outputs": [],
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "id": "0f39c0bf",
    "metadata": {},
    "outputs": [],
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "id": "aaee0054",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 24,
    "id": "50d6a6d0",
    "metadata": {},
    "outputs": [],
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 25,
    "id": "7a980f97",
    "metadata": {},
    "outputs": [],
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 26,
    "id": "9279734c",
    "metadata": {},
    "outputs": [],
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 27,
    "id": "7d1d0ea4",
    "metadata": {},
    "outputs": [],
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 28,
    "id": "f484d861",
    "metadata": {},
    "outputs": [],
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 29,
    "id": "fec52b91",
    "metadata": {},
    "outputs": [],
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 30,
    "id": "1d63ce6c",
    "metadata": {},
    "outputs": [],
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 31,
    "id": "433390ec",
    "metadata": {},
    "outputs": [],
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 32,
    "id": "7eb7a0de",
    "metadata": {},
    "outputs": [],
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 33,
    "id": "57020edd",
    "metadata": {},
    "outputs": [],
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 34,
    "id": "d2f0c63a",
    "metadata": {},
    "outputs": [],
@@ -2073,15 +2073,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 56,
    "id": "4547ab64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "interesują mnie artykuły związane z tematem szczecińskich korzeń, bądź też skrypty\n",
+      "może być encyklopedia zawierająca nieświrnięta nielibiąskiemu furtką, ewentualnie rozprawa, podręcznik albo artykuł\n",
+      "chciałbym patent , w którym znajdę human rights international albo też pomiędzy także książkę\n",
+      "weź mi poleć książki odnoszące się do doliny san i jednocześnie pracę naukową i ewentualnie podręcznik\n",
+      "interesują mnie eseje naukowe omawiające przepływ pieniężny albo publikacje\n",
+      "interesują mnie prace omawiające dziejów, papiery\n",
+      "chciałabym artykuły odnośnie : jednostki ładunkowy ewentualnie też makóweczkę pozagaszań tatarscy bądź też coś\n",
+      "daj mi czegoś tyczącego się dziennikarstwa, pracę inżynierską lub ewentualnie recenzję\n",
+      "masz może pracę posiadającą tagi gdańscy kapitał intelektualny nie encyklopedie\n",
+      "poleć recenzje pracy jednocześnie cokolwiek wyjaśniającego dolepionego niekrematoryjną, oraz książkę\n"
+     ]
+    }
+   ],
    "source": [
     "# multi-part sentence\n",
     "# Docs and keywords\n",
     "list_of_docs_and_keywords_docs = []\n",
-    "for i in range(5000):\n",
+    "for i in range(10):\n",
     "    try:\n",
     "        j = 0\n",
     "        search_word = random.choice(search_words)\n",
@@ -2097,7 +2114,7 @@
     "                choice_words_and = [\"i\", \"oraz\",\"także\", \"i jednocześnie\", 'tylko', 'nie', 'bez', \"a także\", \", \"]\n",
     "                choice_words_or = [\"lub\", \"albo\", \"lub też\", \"bądź\", \"ewentualnie\", \"bądź też\", \"lub ewentualnie\"]\n",
     "                or_word, or_slots, a = get_l_operator(choice_words_and, choice_words_or, 0.45, 0.9)\n",
-    "                if \",\" not in a.split(' ') and random.uniform(0,1) > 0.9 and a != \", \":\n",
+    "                if \",\" not in a.split(' ') and random.uniform(0,1) > 0.7:\n",
     "                    or_word = \",\" + or_word\n",
     "                    or_slots = [\"O\"] + or_slots\n",
     "                    a = \", \" + a  \n",
@@ -2175,16 +2192,16 @@
     "        sentence_full = search_word['baza'] + ' ' + sentence_full\n",
     "        slots_full = search_word_slot + slots_full\n",
     "        tokens_full = search_word_tokens + tokens_full\n",
-    "        #print(sentence_full)\n",
+    "        print(sentence_full)\n",
     "        #print(tokens_full)\n",
     "        #print(slots_full)\n",
     "        sentence_dict = {'sentence': sentence_full, 'tokens': tokens_full, 'slots': slots_full}\n",
     "        sentence_dict = infuse_mistakes(sentence_dict)\n",
     "        list_of_docs_and_keywords_docs.append(sentence_dict)\n",
     "    except:\n",
-    "        print(sentence_full)\n",
-    "        print(tokens_full)\n",
-    "        print(slots_full)\n",
+    "        #print(sentence_full)\n",
+    "        #print(tokens_full)\n",
+    "        #print(slots_full)\n",
     "        break"
    ]
   },
